@@ -1,5 +1,6 @@
 2005-01-13  Michael Snyder  <msnyder@redhat.com>
 
+	* infrun.c: Whitespace tweaks.
 	* infcmd.c: Whitespace tweaks.
 	* hpux-thread.c: Whitespace tweaks.
 	* hppa-hpux-tdep.c: Whitespace tweaks.
